@@ -175,3 +175,29 @@ Plugin Context Processors take a new argument
 of the context is available to them. So if you have existing Plugin Context
 Processors you will need to change their function signature to add the extra
 argument.
+
+Apphooks
+========
+
+Apphooks have moved from the title to the page model. This means there are no
+more separate apphooks possible per language. A new namespace field has been
+added.
+
+.. note::
+    The reverse id is not used for the namespace anymore.
+    If you used namespaced apphooks before, be sure to update your pages and fill out the namespace fields.
+
+If you use apphook apps with ``app_name`` for app namespaces be sure to fill out the namespace field as of now
+it is required to have a namespace defined if you use app namespaces.
+
+``request.current_app`` has been removed. If you relied on this, use the following
+code instead in your views::
+
+    def my_view(request):
+      current_app = resolve(request.path).namespace
+      context = RequestContext(request, current_app=current_app)
+      return render_to_response("my_templace.html", context_instance=context)
+
+
+
+Details can be found here: :ref:`multi_apphook`
